tests/parsing/smtlib/poly/errors/031_match_unclosed_2.expected
File "tests/parsing/smtlib/poly/errors/031_match_unclosed_2.psmt2", line 3, character 44-45:
3 | (define-fun f ((x t)) t (= (match x ((A B)) 5))
                                                ^
Error while parsing a match, read the integer '5',
      but expected a closing parenthesis to close the match.
